--- a/UI/skd-ref-site/src/assets/i18n/en.json
+++ b/UI/skd-ref-site/src/assets/i18n/en.json
@@ -52,6 +52,12 @@
 		"Full": "Full",
 		"All": "All"
 	},
+	"YourPics": {
+		"YourPics": "Your Pics",
+		"SelectPicturesFromDevice": "Select pictures from your device to draw!",
+		"NoDataIsSent": "No data is sent to our server, and nobody else will be able to see the pictures you select.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Filters": {
 		"All": "All",	
 		"Type": "Type",	
