--- a/UI/skd-ref-site/src/assets/i18n/fil.json
+++ b/UI/skd-ref-site/src/assets/i18n/fil.json
@@ -66,6 +66,12 @@
         "Side": "gilid",
         "View": "tignan"
     },
+    "YourPics": {
+		"YourPics": "Your Pics",
+		"SelectPicturesFromDevice": "Select pictures from your device to draw!",
+		"NoDataIsSent": "No data is sent to our server, and nobody else will be able to see the pictures you select.",
+		"ShuffleImages": "Shuffle images"
+	},
     "Header": {
         "AddImages": "Mag dagdag ng imahe",
         "YourImages": "Iyong imahe",
