--- a/UI/skd-ref-site/src/assets/i18n/nl.json
+++ b/UI/skd-ref-site/src/assets/i18n/nl.json
@@ -79,6 +79,12 @@
 		"true": "Waar",
 		"false": "Niet waar"
 	},
+	"YourPics": {
+		"YourPics": "Jouw foto's",
+		"SelectPicturesFromDevice": "Selecteer foto's op uw apparaat om te tekenen!",
+		"NoDataIsSent": "Er worden geen gegevens naar onze server verzonden en niemand anders kan de door u geselecteerde foto's zien.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "r/SketchDaily Referentiemateriaal",
 		"AddImages": "Afbeeldingen toevoegen",
