--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -79,6 +79,12 @@
 		"true": "Истина",
 		"false": "Ложь"
 	},
+	"YourPics": {
+		"YourPics": "Ваши фотографии",
+		"SelectPicturesFromDevice": "Выберите изображения на своем устройстве, чтобы рисовать!",
+		"NoDataIsSent": "Никакие данные не отправляются на наш сервер, и никто другой не сможет увидеть выбранные вами изображения.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "Помощь Для Рисования С Натуры r/SketchDaily",
 		"AddImages": "Добавить изображения",
