--- a/UI/skd-ref-site/src/assets/i18n/uk.json
+++ b/UI/skd-ref-site/src/assets/i18n/uk.json
@@ -79,6 +79,12 @@
 		"true": "Увімкнено",
 		"false": "Вимкнено"
 	},
+	"YourPics": {
+		"YourPics": "Ваші фотографії",
+		"SelectPicturesFromDevice": "Виберіть зображення зі свого пристрою, щоб намалювати!",
+		"NoDataIsSent": "Жодні дані не надсилаються на наш сервер, і ніхто інший не зможе побачити вибрані вами зображення.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "r/SketchDaily зразки",
 		"AddImages": "Додати зображення",
