--- a/UI/skd-ref-site/src/assets/i18n/es.json
+++ b/UI/skd-ref-site/src/assets/i18n/es.json
@@ -79,6 +79,12 @@
 		"true": "Verdadero",
 		"false": "Falso"
 	},
+	"YourPics": {
+		"YourPics": "Your Pics",
+		"SelectPicturesFromDevice": "Select pictures from your device to draw!",
+		"NoDataIsSent": "No data is sent to our server, and nobody else will be able to see the pictures you select.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "Referencias de r/SketchDaily",
 		"AddImages": "Añadir imágenes",
