--- a/UI/skd-ref-site/src/assets/i18n/ko.json
+++ b/UI/skd-ref-site/src/assets/i18n/ko.json
@@ -79,6 +79,12 @@
 		"true": "예",
 		"false": "아니요"
 	},
+	"YourPics": {
+		"YourPics": "당신의 사진",
+		"SelectPicturesFromDevice": "장치에서 그림을 선택하여 그려보세요!",
+		"NoDataIsSent": "어떤 데이터도 우리 서버로 전송되지 않으며 다른 누구도 귀하가 선택한 사진을 볼 수 없습니다.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "r/SketchDaily 레퍼런스",
 		"AddImages": "이미지 추가",
