--- a/UI/skd-ref-site/src/assets/i18n/sn.json
+++ b/UI/skd-ref-site/src/assets/i18n/sn.json
@@ -79,6 +79,12 @@
 		"false": "Nhema",
 		"true": "Chokwadi"
 	},
+	"YourPics": {
+		"YourPics": "Mapikicha ako",
+		"SelectPicturesFromDevice": "Sarudza mapikicha kubva pachishandiso chako kudhirowa!",
+		"NoDataIsSent": "Hapana data inotumirwa kune yedu server, uye hapana mumwe munhu achakwanisa kuona iyo mifananidzo yaunosarudza.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": "MaReference epa chisubhuredhiti ye r/Sketchdaily",
 		"AddImages": "Isa mifananidzo",
