--- a/UI/skd-ref-site/src/assets/i18n/vi.json
+++ b/UI/skd-ref-site/src/assets/i18n/vi.json
@@ -79,6 +79,12 @@
 		"true": "Đúng",
 		"false": "Sai"
 	},
+	"YourPics": {
+		"YourPics": "Những bức ảnh của bạn",
+		"SelectPicturesFromDevice": "Chọn hình ảnh từ thiết bị của bạn để vẽ!",
+		"NoDataIsSent": "Không có dữ liệu nào được gửi đến máy chủ của chúng tôi và không ai khác có thể xem ảnh bạn chọn.",
+		"ShuffleImages": "Shuffle images"
+	},
 	"Header": {
 		"Title": " References từ r/SketchDaily",
 		"AddImages": "Thêm hình ảnh",
