--- a/UI/skd-ref-site/src/assets/i18n/hr.json
+++ b/UI/skd-ref-site/src/assets/i18n/hr.json
@@ -83,7 +83,7 @@
 		"YourPics": "Vaše slike",
 		"SelectPicturesFromDevice": "Odaberite slike sa svog uređaja za crtanje!",
 		"NoDataIsSent": "Podaci se ne šalju na naš poslužitelj i nitko drugi neće moći vidjeti slike koje odaberete.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Nasumična reprodukcija slika"
 	},
 	"Header": {
 		"Title": "r/SketchDaily reference",
