--- a/UI/skd-ref-site/src/assets/i18n/hu.json
+++ b/UI/skd-ref-site/src/assets/i18n/hu.json
@@ -83,7 +83,7 @@
 		"YourPics": "Az Ön képei",
 		"SelectPicturesFromDevice": "Válasszon képeket a készülékéről a rajzoláshoz!",
 		"NoDataIsSent": "A szerverünkre nem küldenek adatokat, és senki más nem láthatja az Ön által kiválasztott képeket.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Képek keverése"
 	},
 	"Header": {
 		"Title": "r/NapiVázlat Referenciák",
