--- a/UI/skd-ref-site/src/assets/i18n/hy.json
+++ b/UI/skd-ref-site/src/assets/i18n/hy.json
@@ -83,7 +83,7 @@
 		"YourPics": "Ձեր նկարները",
 		"SelectPicturesFromDevice": "Ընտրեք նկարներ ձեր սարքից նկարելու համար:",
 		"NoDataIsSent": "Ոչ մի տվյալ չի ուղարկվում մեր սերվերին, և ոչ ոք չի կարողանա տեսնել ձեր ընտրած նկարները:",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Խառնել պատկերները"
 	},
 	"Header": {
 		"Title": "r/SketchDaily բնորդներ",
