--- a/UI/skd-ref-site/src/assets/i18n/id.json
+++ b/UI/skd-ref-site/src/assets/i18n/id.json
@@ -94,7 +94,7 @@
 		"YourPics": "Foto Anda",
 		"SelectPicturesFromDevice": "Pilih gambar dari perangkat Anda untuk digambar!",
 		"NoDataIsSent": "Tidak ada data yang dikirim ke server kami, dan tidak ada orang lain yang dapat melihat gambar yang Anda pilih.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Acak gambar"
 	},
 	"Header": {
 		"Title": "Referensi r/SketchDaily",
