--- a/UI/skd-ref-site/src/assets/i18n/it.json
+++ b/UI/skd-ref-site/src/assets/i18n/it.json
@@ -83,7 +83,7 @@
 		"YourPics": "Le tue foto",
 		"SelectPicturesFromDevice": "Seleziona le immagini dal tuo dispositivo per disegnare!",
 		"NoDataIsSent": "Nessun dato viene inviato al nostro server e nessun altro sarà in grado di vedere le immagini selezionate.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Mescola le immagini"
 	},
 	"Header": {
 		"Title": "Riferimenti di r/SketchDaily",
