--- a/UI/skd-ref-site/src/assets/i18n/iw.json
+++ b/UI/skd-ref-site/src/assets/i18n/iw.json
@@ -83,7 +83,7 @@
 		"YourPics": "התמונות שלך",
 		"SelectPicturesFromDevice": "בחר תמונות מהמכשיר שלך לצייר!",
 		"NoDataIsSent": "לא נשלח נתונים לשרת שלנו, ואף אחד אחר לא יוכל לראות את התמונות שבחרת.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "ערבב תמונות"
 	},
 	"Header": {
 		"Title": "רפרנסים מ-r/SketchDaily",
