--- a/UI/skd-ref-site/src/assets/i18n/ja.json
+++ b/UI/skd-ref-site/src/assets/i18n/ja.json
@@ -83,7 +83,7 @@
 		"YourPics": "あなたの写真",
 		"SelectPicturesFromDevice": "デバイスから絵を選択して描きましょう!",
 		"NoDataIsSent": "データはサーバーに送信されず、選択した写真を他の人が見ることはできません。",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "画像をシャッフルする"
 	},
 	"Header": {
 		"Title": "r/SketchDaily References",
