--- a/UI/skd-ref-site/src/assets/i18n/mn.json
+++ b/UI/skd-ref-site/src/assets/i18n/mn.json
@@ -83,7 +83,7 @@
 		"YourPics": "Таны зургууд",
 		"SelectPicturesFromDevice": "Зурахын тулд төхөөрөмжөөсөө зураг сонго!",
 		"NoDataIsSent": "Манай серверт ямар ч өгөгдөл илгээгдээгүй бөгөөд таны сонгосон зургуудыг хэн ч харах боломжгүй.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Зургийг холих"
 	},
 	"Header": {
 		"Title": "r/SketchDaily References",
