--- a/UI/skd-ref-site/src/assets/i18n/mt.json
+++ b/UI/skd-ref-site/src/assets/i18n/mt.json
@@ -83,7 +83,7 @@
 		"YourPics": "Pics tiegħek",
 		"SelectPicturesFromDevice": "Agħżel stampi mit-tagħmir tiegħek biex tiġbed!",
 		"NoDataIsSent": "L-ebda data ma tintbagħat lis-server tagħna, u ħadd ieħor ma jkun jista’ jara l-istampi li tagħżel.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Shuffle immaġini"
 	},
 	"Header": {
 		"Title": "r/SketchDaily Referenzi",
