--- a/UI/skd-ref-site/src/assets/i18n/nl.json
+++ b/UI/skd-ref-site/src/assets/i18n/nl.json
@@ -83,7 +83,7 @@
 		"YourPics": "Jouw foto's",
 		"SelectPicturesFromDevice": "Selecteer foto's op uw apparaat om te tekenen!",
 		"NoDataIsSent": "Er worden geen gegevens naar onze server verzonden en niemand anders kan de door u geselecteerde foto's zien.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Afbeeldingen in willekeurige volgorde afspelen"
 	},
 	"Header": {
 		"Title": "r/SketchDaily Referentiemateriaal",
