--- a/UI/skd-ref-site/src/assets/i18n/nn.json
+++ b/UI/skd-ref-site/src/assets/i18n/nn.json
@@ -83,7 +83,7 @@
 		"YourPics": "Dine bilder",
 		"SelectPicturesFromDevice": "Velg bilder fra enheten du vil tegne!",
 		"NoDataIsSent": "Ingen data sendes til serveren vår, og ingen andre vil kunne se bildene du velger.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Bland bilder"
 	},
 	"Header": {
 		"Title": "r/SketchDaily References",
