--- a/UI/skd-ref-site/src/assets/i18n/po.json
+++ b/UI/skd-ref-site/src/assets/i18n/po.json
@@ -83,7 +83,7 @@
 		"YourPics": "Twoje fotki",
 		"SelectPicturesFromDevice": "Wybierz zdjęcia ze swojego urządzenia, aby narysować!",
 		"NoDataIsSent": "Żadne dane nie są przesyłane na nasz serwer i nikt inny nie będzie mógł zobaczyć wybranych przez Ciebie zdjęć.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Mieszaj obrazy"
 	},
     "Header": {
         "Title": "r/SketchDaily References",
