--- a/UI/skd-ref-site/src/assets/i18n/pt.json
+++ b/UI/skd-ref-site/src/assets/i18n/pt.json
@@ -83,7 +83,7 @@
 		"YourPics": "Suas fotos",
 		"SelectPicturesFromDevice": "Selecione fotos do seu dispositivo para desenhar!",
 		"NoDataIsSent": "Nenhum dado é enviado ao nosso servidor e ninguém mais poderá ver as imagens que você selecionar.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Embaralhar imagens"
 	},
 	"Header": {
 		"Title": "r/SketchDaily Referências",
