--- a/UI/skd-ref-site/src/assets/i18n/ro.json
+++ b/UI/skd-ref-site/src/assets/i18n/ro.json
@@ -83,7 +83,7 @@
 		"YourPics": "Pozele tale",
 		"SelectPicturesFromDevice": "Selectați imagini de pe dispozitivul dvs. pentru a desena!",
 		"NoDataIsSent": "Nu sunt trimise date către serverul nostru și nimeni altcineva nu va putea vedea imaginile pe care le selectați.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Amestecă imaginile"
 	},
 	"Header": {
 		"Title": "r/SketchDaily References",
