--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -83,7 +83,7 @@
 		"YourPics": "Ваши фотографии",
 		"SelectPicturesFromDevice": "Выберите изображения на своем устройстве, чтобы рисовать!",
 		"NoDataIsSent": "Никакие данные не отправляются на наш сервер, и никто другой не сможет увидеть выбранные вами изображения.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Перемешать изображения"
 	},
 	"Header": {
 		"Title": "Помощь Для Рисования С Натуры r/SketchDaily",
