--- a/UI/skd-ref-site/src/assets/i18n/sn.json
+++ b/UI/skd-ref-site/src/assets/i18n/sn.json
@@ -83,7 +83,7 @@
 		"YourPics": "Mapikicha ako",
 		"SelectPicturesFromDevice": "Sarudza mapikicha kubva pachishandiso chako kudhirowa!",
 		"NoDataIsSent": "Hapana data inotumirwa kune yedu server, uye hapana mumwe munhu achakwanisa kuona iyo mifananidzo yaunosarudza.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Shuffle mifananidzo"
 	},
 	"Header": {
 		"Title": "MaReference epa chisubhuredhiti ye r/Sketchdaily",
