--- a/UI/skd-ref-site/src/assets/i18n/sr.json
+++ b/UI/skd-ref-site/src/assets/i18n/sr.json
@@ -83,7 +83,7 @@
 		"YourPics": "Ваше слике",
 		"SelectPicturesFromDevice": "Изаберите слике са свог уређаја за цртање!",
 		"NoDataIsSent": "Подаци се не шаљу на наш сервер и нико други неће моћи да види слике које изаберете.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Схуффле имагес"
 	},
     "Header": {
         "Title": "r/SketchDaily референце",
