--- a/UI/skd-ref-site/src/assets/i18n/sv.json
+++ b/UI/skd-ref-site/src/assets/i18n/sv.json
@@ -83,7 +83,7 @@
 		"YourPics": "Dina bilder",
 		"SelectPicturesFromDevice": "Välj bilder från din enhet att rita!",
 		"NoDataIsSent": "Ingen data skickas till vår server, och ingen annan kommer att kunna se bilderna du väljer.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Blanda bilder"
 	},
 	"Header": {
 		"Title": "r/SketchDaily Referenser",
