--- a/UI/skd-ref-site/src/assets/i18n/tl.json
+++ b/UI/skd-ref-site/src/assets/i18n/tl.json
@@ -83,7 +83,7 @@
 		"YourPics": "Iyong mga Larawan",
 		"SelectPicturesFromDevice": "Pumili ng mga larawan mula sa iyong device na iguguhit!",
 		"NoDataIsSent": "Walang data na ipinapadala sa aming server, at walang ibang makakakita sa mga larawang pipiliin mo.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "I-shuffle ang mga larawan"
 	},
     "Header": {
         "Title": "r/SketchDaily References",
