--- a/UI/skd-ref-site/src/assets/i18n/tr.json
+++ b/UI/skd-ref-site/src/assets/i18n/tr.json
@@ -83,7 +83,7 @@
 		"YourPics": "Fotoğrafların",
 		"SelectPicturesFromDevice": "Çizmek için cihazınızdan resimler seçin!",
 		"NoDataIsSent": "Sunucumuza hiçbir veri gönderilmez ve seçtiğiniz resimleri başka kimse göremez.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Resimleri karıştır"
 	},
 	"Header": {
 		"Title": "r/SketchDaily Referanslar",
