--- a/UI/skd-ref-site/src/assets/i18n/uk.json
+++ b/UI/skd-ref-site/src/assets/i18n/uk.json
@@ -83,7 +83,7 @@
 		"YourPics": "Ваші фотографії",
 		"SelectPicturesFromDevice": "Виберіть зображення зі свого пристрою, щоб намалювати!",
 		"NoDataIsSent": "Жодні дані не надсилаються на наш сервер, і ніхто інший не зможе побачити вибрані вами зображення.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Перемішування зображень"
 	},
 	"Header": {
 		"Title": "r/SketchDaily зразки",
