--- a/UI/skd-ref-site/src/assets/i18n/vi.json
+++ b/UI/skd-ref-site/src/assets/i18n/vi.json
@@ -83,7 +83,7 @@
 		"YourPics": "Những bức ảnh của bạn",
 		"SelectPicturesFromDevice": "Chọn hình ảnh từ thiết bị của bạn để vẽ!",
 		"NoDataIsSent": "Không có dữ liệu nào được gửi đến máy chủ của chúng tôi và không ai khác có thể xem ảnh bạn chọn.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Xáo trộn hình ảnh"
 	},
 	"Header": {
 		"Title": " References từ r/SketchDaily",
