--- a/UI/skd-ref-site/src/assets/i18n/zh.json
+++ b/UI/skd-ref-site/src/assets/i18n/zh.json
@@ -83,7 +83,7 @@
 		"YourPics": "你的照片",
 		"SelectPicturesFromDevice": "从您的设备中选择图片进行绘制！",
 		"NoDataIsSent": "不会将任何数据发送到我们的服务器，其他人也无法看到您选择的图片。",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "随机播放图像"
 	},
 	"Header": {
 		"Title": "r/SketchDaily References",
