--- a/UI/skd-ref-site/src/assets/i18n/lv.json
+++ b/UI/skd-ref-site/src/assets/i18n/lv.json
@@ -94,7 +94,7 @@
 		"YourPics": "Jūsu attēli",
 		"SelectPicturesFromDevice": "Izvēlieties attēlus no ierīces, ko zīmēt!",
 		"NoDataIsSent": "Uz mūsu serveri netiek sūtīti nekādi dati, un neviens cits nevarēs redzēt jūsu atlasītos attēlus.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Jauktā secībā attēlus"
 	},
     "Header": {
         "Title": "r/SketchDaily References",
