--- a/UI/skd-ref-site/src/assets/i18n/mk.json
+++ b/UI/skd-ref-site/src/assets/i18n/mk.json
@@ -83,7 +83,7 @@
 		"YourPics": "Вашите слики",
 		"SelectPicturesFromDevice": "Изберете слики од вашиот уред за цртање!",
 		"NoDataIsSent": "Не се испраќаат податоци до нашиот сервер и никој друг нема да може да ги види сликите што ќе ги изберете.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Мешај слики"
 	},
 	"Header": {
 		"Title": "r/SketchDaily слики",
