--- a/UI/skd-ref-site/src/assets/i18n/th.json
+++ b/UI/skd-ref-site/src/assets/i18n/th.json
@@ -83,7 +83,7 @@
 		"YourPics": "รูปของคุณ",
 		"SelectPicturesFromDevice": "เลือกรูปภาพจากอุปกรณ์ของคุณเพื่อวาด!",
 		"NoDataIsSent": "ไม่มีการส่งข้อมูลไปยังเซิร์ฟเวอร์ของเรา และจะไม่มีใครสามารถเห็นภาพที่คุณเลือกได้",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "สุ่มภาพ"
 	},
 	"Header": {
 		"Title": "r/SketchDaily อ้างอิง",
