--- a/UI/skd-ref-site/src/assets/i18n/tt.json
+++ b/UI/skd-ref-site/src/assets/i18n/tt.json
@@ -83,7 +83,7 @@
 		"YourPics": "Сезнең рәсемнәр",
 		"SelectPicturesFromDevice": "Рәсем ясау өчен җайланмадан рәсемнәр сайлагыз!",
 		"NoDataIsSent": "Безнең серверга бернинди мәгълүмат җибәрелми, һәм сез сайлаган рәсемнәрне бүтән беркем дә күрә алмаячак.",
-		"ShuffleImages": "Shuffle images"
+		"ShuffleImages": "Рәсемнәрне алыштыру"
 	},
     "Header": {
         "Title": "r/SketchDaily References",
